--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
                     <img src="./public/next-dot-js-svgrepo-com.svg" alt="" class="invertImg">
                     <span class="tooltipText">NextJS</span>
                 </div>
+                <div class="tooltip">
+                    <img src="./public/svelte-svgrepo-com.svg" alt="" class="img">
+                    <span class="tooltipText">Svelte/Kit</span>
+                </div>
             </div>
 
             <hr>
@@ -75,7 +79,7 @@
             <div class="images">
                 <div class="tooltip">
                     <img src="./public/express-svgrepo-com.svg" alt="" class="invertImg">
-                    <span class="tooltipText">Express.js</span>
+                    <span class="tooltipText">ExpressJS</span>
                 </div>
 
                 <div class="tooltip">
@@ -114,24 +118,30 @@
                 <li>
                     <a href="https://savashn.github.io/password-creator/" target="_blank">PASSWORD CREATOR</a>
                     &nbsp; &mdash; &nbsp;
-                    A basic password creator based on HTML, CSS and JavaScript.
+                    A basic password creator made with HTML, CSS and JavaScript.
                 </li>
                 <li>
                     <a href="https://check-app-eight.vercel.app/" target="_blank">CHECK-APP</a>
                     &nbsp; &mdash; &nbsp;
-                    A check app for restaurants, cafes and bars based on JavaScript, Next.js, Express.js and MongoDB.
+                    A check app for restaurants, cafes and bars; made with JavaScript, Next.js, Express.js and MongoDB.
                 </li>
                 <li>
                     <a href="https://lexicographia.com/" target="_blank">LEXICOGRAPHIA</a>
                     &nbsp; &mdash; &nbsp;
-                    A dictionary app that allows its users to create dictionaries, based on JavaScript, Next.js, Fastify
-                    and
-                    MongoDB.
+                    A dictionary app that allows its users to create their own dictionaries; made with JavaScript,
+                    Next.js,
+                    Fastify
+                    and MongoDB.
                 </li>
                 <li>
                     <a href="https://wordimus.com/">WORDIMUS</a>
                     &nbsp; &mdash; &nbsp;
-                    A blog app based on TypeScript, Next.js, Express.js and PostgreSQL.
+                    A blog app made with TypeScript, Next.js, Express.js and PostgreSQL.
+                </li>
+                <li>
+                    <a href="https://tic-tac-toe-omega-ivory.vercel.app/">TIC-TAC-TOE</a>
+                    &nbsp; &mdash; &nbsp;
+                    A basic tic-tac-toe game made with SvelteKit.
                 </li>
             </ul>
         </div>
