--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Savas Sahin's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
                 SAVAS SAHIN
             </h1>
             <h2 class="name">
-                FULLSTACK JAVASCRIPT WEB DEVELOPER
+                FULLSTACK WEB DEVELOPER
             </h2>
 
         </header>
@@ -37,6 +37,14 @@
 
             <div class="images">
                 <div class="tooltip">
+                    <img src="./public/html-5-svgrepo-com.svg" alt="" class="img">
+                    <span class="tooltipText">HTML</span>
+                </div>
+                <div class="tooltip">
+                    <img src="./public/css-3-svgrepo-com.svg" alt="" class="img">
+                    <span class="tooltipText">CSS</span>
+                </div>
+                <div class="tooltip">
                     <img src="./public/javascript-svgrepo-com.svg" alt="" class="img">
                     <span class="tooltipText">JavaScript</span>
                 </div>
@@ -44,11 +52,6 @@
                 <div class="tooltip">
                     <img src="./public/typescript-logo-svgrepo-com.svg" alt="" class="img">
                     <span class="tooltipText">TypeScript</span>
-                </div>
-
-                <div class="tooltip">
-                    <img src="./public/css-3-svgrepo-com.svg" alt="" class="img">
-                    <span class="tooltipText">CSS</span>
                 </div>
             </div>
 
@@ -69,6 +72,10 @@
                 <div class="tooltip">
                     <img src="./public/svelte-svgrepo-com.svg" alt="" class="img">
                     <span class="tooltipText">Svelte/Kit</span>
+                </div>
+                <div class="tooltip">
+                    <img src="./public/tailwind-svgrepo-com.svg" alt="" class="img">
+                    <span class="tooltipText">TailwindCSS</span>
                 </div>
             </div>
 
@@ -116,32 +123,47 @@
 
             <ul>
                 <li>
-                    <a href="https://savashn.github.io/password-creator/" target="_blank">PASSWORD CREATOR</a>
+                    <a href="#" class="appLink">GEZGI</a>
                     &nbsp; &mdash; &nbsp;
-                    A basic password creator made with HTML, CSS and JavaScript.
+                    An enterprise management application for tourism companies; built with TypeScript, TailwindCSS,
+                    Next.js, Express.js and PostgreSQL. <a href="https://github.com/savashn/gezgi"
+                        class="githubLink">[FRONTEND CODE]</a> <a href="https://github.com/savashn/gezgi-api"
+                        class="githubLink">[BACKEND CODE]</a>
                 </li>
                 <li>
-                    <a href="https://check-app-eight.vercel.app/" target="_blank">CHECK-APP</a>
+                    <a href="https://lexicographia.com/" class="appLink">LEXICOGRAPHIA</a>
                     &nbsp; &mdash; &nbsp;
-                    A check app for restaurants, cafes and bars; made with JavaScript, Next.js, Express.js and MongoDB.
+                    A dictionary app that allows its users to create their own dictionaries; built with JavaScript,
+                    Next.js, Fastify and MongoDB. <a href="https://github.com/savashn/lexicographia"
+                        class="githubLink">[FRONTEND CODE]</a> <a href="https://github.com/savashn/lexicographia-api"
+                        class="githubLink">[BACKEND CODE]</a>
                 </li>
                 <li>
-                    <a href="https://lexicographia.com/" target="_blank">LEXICOGRAPHIA</a>
+                    <a href="https://savashn.github.io/password-creator/" class="appLink">PASSWORD CREATOR</a>
                     &nbsp; &mdash; &nbsp;
-                    A dictionary app that allows its users to create their own dictionaries; made with JavaScript,
-                    Next.js,
-                    Fastify
-                    and MongoDB.
+                    A basic password creator built with HTML, CSS and JavaScript. <a
+                        href="https://github.com/savashn/password-creator" class="githubLink">[SOURCE CODE]</a>
                 </li>
                 <li>
-                    <a href="https://wordimus.com/">WORDIMUS</a>
+                    <a href="https://check-app-eight.vercel.app/" class="appLink">CHECK-APP</a>
                     &nbsp; &mdash; &nbsp;
-                    A blog app made with TypeScript, Next.js, Express.js and PostgreSQL.
+                    A check app for restaurants, cafes and bars; built with JavaScript, Next.js, Express.js and MongoDB.
+                    <a href="https://github.com/savashn/check-app" class="githubLink">[FRONTEND
+                        CODE]</a> <a href="https://github.com/savashn/check-app-api" class="githubLink">[BACKEND
+                        CODE]</a>
                 </li>
                 <li>
-                    <a href="https://tic-tac-toe-omega-ivory.vercel.app/">TIC-TAC-TOE</a>
+                    <a href="https://wordimus.com/" class="appLink">WORDIMUS</a>
                     &nbsp; &mdash; &nbsp;
-                    A basic tic-tac-toe game made with SvelteKit.
+                    A blog app built with TypeScript, Next.js, Express.js and PostgreSQL. <a
+                        href="https://github.com/savashn/wordimus" class="githubLink">[FRONTEND CODE]</a> <a
+                        href="https://github.com/savashn/wordimus-api" class="githubLink">[BACKEND CODE]</a>
+                </li>
+                <li>
+                    <a href="https://tic-tac-toe-omega-ivory.vercel.app/" class="appLink">TIC-TAC-TOE</a>
+                    &nbsp; &mdash; &nbsp;
+                    A basic tic-tac-toe game built with SvelteKit. <a href="https://github.com/savashn/tic-tac-toe"
+                        class="githubLink">[SOURCE CODE]</a>
                 </li>
             </ul>
         </div>
