--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
             <ul>
                 <li>
-                    <a href="#" class="appLink">GEZGI</a>
+                    <a href="https://gezgi.vercel.app/" class="appLink">GEZGI</a>
                     &nbsp; &mdash; &nbsp;
                     An enterprise management application for tourism companies; built with TypeScript, TailwindCSS,
                     Next.js, Express.js and PostgreSQL. <a href="https://github.com/savashn/gezgi"
