--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
 
             <div class="images">
                 <div class="tooltip">
-                    <img src="./public/mongodb-svgrepo-com.svg" alt="" class="img">
-                    <span class="tooltipText">MongoDB</span>
+                    <img src="./public/postgresql-svgrepo-com.svg" alt="" class="img">
+                    <span class="tooltipText">PostgreSQL</span>
                 </div>
 
                 <div class="tooltip">
-                    <img src="./public/postgresql-svgrepo-com.svg" alt="" class="img">
-                    <span class="tooltipText">PostgreSQL</span>
+                    <img src="./public/mongodb-svgrepo-com.svg" alt="" class="img">
+                    <span class="tooltipText">MongoDB</span>
                 </div>
             </div>
 
@@ -120,50 +120,56 @@
         </h3>
 
         <div class="projects">
-
             <ul>
-                <li>
-                    <a href="https://gezgi.vercel.app/" class="appLink">GEZGI</a>
-                    &nbsp; &mdash; &nbsp;
-                    An enterprise management application for tourism companies; built with TypeScript, TailwindCSS,
-                    Next.js, Express.js and PostgreSQL. <a href="https://github.com/savashn/gezgi"
-                        class="githubLink">[FRONTEND CODE]</a> <a href="https://github.com/savashn/gezgi-api"
-                        class="githubLink">[BACKEND CODE]</a>
-                </li>
                 <li>
                     <a href="https://lexicographia.com/" class="appLink">LEXICOGRAPHIA</a>
                     &nbsp; &mdash; &nbsp;
                     A dictionary app that allows its users to create their own dictionaries; built with JavaScript,
-                    Next.js, Fastify and MongoDB. <a href="https://github.com/savashn/lexicographia"
-                        class="githubLink">[FRONTEND CODE]</a> <a href="https://github.com/savashn/lexicographia-api"
-                        class="githubLink">[BACKEND CODE]</a>
+                    Next.js, Fastify and MongoDB.
+                    <a href="https://github.com/savashn/lexicographia" class="githubLink">[FRONTEND CODE]</a>
+                    <a href="https://github.com/savashn/lexicographia-api" class="githubLink">[BACKEND CODE]</a>
+                </li>
+                <li>
+                    <a href="https://cuial.com/" class="appLink">CUIAL</a>
+                    &nbsp; &mdash; &nbsp;
+                    A Dead Man's Switch that sends email to the people you love after you died; built with TypeScript,
+                    SvelteKit, Express.js and MongoDB.
+                    <a href="https://github.com/savashn/cuial" class="githubLink">[FRONTEND CODE]</a>
+                    <a href="https://github.com/savashn/cuial-api" class="githubLink">[BACKEND CODE]</a>
+                </li>
+                <li>
+                    <a href="https://gezgi.vercel.app/" class="appLink">GEZGI</a>
+                    &nbsp; &mdash; &nbsp;
+                    An enterprise management application for tourism companies; built with TypeScript, TailwindCSS,
+                    Next.js, Express.js and PostgreSQL.
+                    <a href="https://github.com/savashn/gezgi" class="githubLink">[FRONTEND CODE]</a>
+                    <a href="https://github.com/savashn/gezgi-api" class="githubLink">[BACKEND CODE]</a>
                 </li>
                 <li>
                     <a href="https://savashn.github.io/password-creator/" class="appLink">PASSWORD CREATOR</a>
                     &nbsp; &mdash; &nbsp;
-                    A basic password creator built with HTML, CSS and JavaScript. <a
-                        href="https://github.com/savashn/password-creator" class="githubLink">[SOURCE CODE]</a>
+                    A basic password creator built with HTML, CSS and JavaScript.
+                    <a href="https://github.com/savashn/password-creator" class="githubLink">[SOURCE CODE]</a>
                 </li>
                 <li>
                     <a href="https://check-app-eight.vercel.app/" class="appLink">CHECK-APP</a>
                     &nbsp; &mdash; &nbsp;
                     A check app for restaurants, cafes and bars; built with JavaScript, Next.js, Express.js and MongoDB.
-                    <a href="https://github.com/savashn/check-app" class="githubLink">[FRONTEND
-                        CODE]</a> <a href="https://github.com/savashn/check-app-api" class="githubLink">[BACKEND
-                        CODE]</a>
+                    <a href="https://github.com/savashn/check-app" class="githubLink">[FRONTEND CODE]</a>
+                    <a href="https://github.com/savashn/check-app-api" class="githubLink">[BACKEND CODE]</a>
                 </li>
                 <li>
                     <a href="https://wordimus.com/" class="appLink">WORDIMUS</a>
                     &nbsp; &mdash; &nbsp;
-                    A blog app built with TypeScript, Next.js, Express.js and PostgreSQL. <a
-                        href="https://github.com/savashn/wordimus" class="githubLink">[FRONTEND CODE]</a> <a
-                        href="https://github.com/savashn/wordimus-api" class="githubLink">[BACKEND CODE]</a>
+                    A blog app built with TypeScript, Next.js, Express.js and PostgreSQL.
+                    <a href="https://github.com/savashn/wordimus" class="githubLink">[FRONTEND CODE]</a>
+                    <a href="https://github.com/savashn/wordimus-api" class="githubLink">[BACKEND CODE]</a>
                 </li>
                 <li>
                     <a href="https://tic-tac-toe-omega-ivory.vercel.app/" class="appLink">TIC-TAC-TOE</a>
                     &nbsp; &mdash; &nbsp;
-                    A basic tic-tac-toe game built with SvelteKit. <a href="https://github.com/savashn/tic-tac-toe"
-                        class="githubLink">[SOURCE CODE]</a>
+                    A basic tic-tac-toe game built with SvelteKit.
+                    <a href="https://github.com/savashn/tic-tac-toe" class="githubLink">[SOURCE CODE]</a>
                 </li>
             </ul>
         </div>
