--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 SAVAS SAHIN
             </h1>
             <h2 class="name">
-                FULLSTACK WEB DEVELOPER
+                FULLSTACK DEVELOPER
             </h2>
 
         </header>
@@ -48,10 +48,13 @@
                     <img src="./public/javascript-svgrepo-com.svg" alt="" class="img">
                     <span class="tooltipText">JavaScript</span>
                 </div>
-
                 <div class="tooltip">
                     <img src="./public/typescript-logo-svgrepo-com.svg" alt="" class="img">
                     <span class="tooltipText">TypeScript</span>
+                </div>
+                <div class="tooltip">
+                    <img src="./public/C_Programming_Language.svg" alt="" class="img">
+                    <span class="tooltipText">C</span>
                 </div>
             </div>
 
@@ -121,6 +124,11 @@
 
         <div class="projects">
             <ul>
+                <li>
+                    <a href="https://github.com/savashn/ecewo" class="appLink">ECEWO</a>
+                    &nbsp; &mdash; &nbsp;
+                    An HTTP server written in C.
+                </li>
                 <li>
                     <a href="https://lexicographia.com/" class="appLink">LEXICOGRAPHIA</a>
                     &nbsp; &mdash; &nbsp;
