--- a/index.html
+++ b/index.html
@@ -125,12 +125,14 @@
         <div class="projects">
             <ul>
                 <li>
-                    <a href="https://github.com/savashn/ecewo" class="appLink">ECEWO</a>
+                    <a href="https://ecewo.vercel.app" class="appLink">ECEWO</a>
                     &nbsp; &mdash; &nbsp;
-                    An HTTP server written in C.
+                    A minimal HTTP framework for C that handles the complexities of C programming and helps you build
+                    your backend with ease. <a href="https://github.com/savashn/ecewo" class="githubLink">[SOURCE
+                        CODE]</a>
                 </li>
                 <li>
-                    <a href="https://lexicographia.com/" class="appLink">LEXICOGRAPHIA</a>
+                    <a href="https://lexicographia.com" class="appLink">LEXICOGRAPHIA</a>
                     &nbsp; &mdash; &nbsp;
                     A dictionary app that allows its users to create their own dictionaries; built with JavaScript,
                     Next.js, Fastify and MongoDB.
@@ -138,7 +140,7 @@
                     <a href="https://github.com/savashn/lexicographia-api" class="githubLink">[BACKEND CODE]</a>
                 </li>
                 <li>
-                    <a href="https://cuial.com/" class="appLink">CUIAL</a>
+                    <a href="https://cuial.com" class="appLink">CUIAL</a>
                     &nbsp; &mdash; &nbsp;
                     A Dead Man's Switch that sends email to the people you love after you died; built with TypeScript,
                     SvelteKit, Express.js and MongoDB.
@@ -146,7 +148,7 @@
                     <a href="https://github.com/savashn/cuial-api" class="githubLink">[BACKEND CODE]</a>
                 </li>
                 <li>
-                    <a href="https://gezgi.vercel.app/" class="appLink">GEZGI</a>
+                    <a href="https://gezgi.vercel.app" class="appLink">GEZGI</a>
                     &nbsp; &mdash; &nbsp;
                     An enterprise management application for tourism companies; built with TypeScript, TailwindCSS,
                     Next.js, Express.js and PostgreSQL.
@@ -154,27 +156,32 @@
                     <a href="https://github.com/savashn/gezgi-api" class="githubLink">[BACKEND CODE]</a>
                 </li>
                 <li>
-                    <a href="https://savashn.github.io/password-creator/" class="appLink">PASSWORD CREATOR</a>
+                    <a href="https://github.com/savashn/ocr" class="appLink">OCR FOR WINDOWS</a>
+                    &nbsp; &mdash; &nbsp;
+                    PDF to .docx and .txt converter for Windows, built with Python and Tesseract OCR.
+                </li>
+                <li>
+                    <a href="https://savashn.github.io/password-creator" class="appLink">PASSWORD CREATOR</a>
                     &nbsp; &mdash; &nbsp;
                     A basic password creator built with HTML, CSS and JavaScript.
                     <a href="https://github.com/savashn/password-creator" class="githubLink">[SOURCE CODE]</a>
                 </li>
                 <li>
-                    <a href="https://check-app-eight.vercel.app/" class="appLink">CHECK-APP</a>
+                    <a href="https://check-app-eight.vercel.app" class="appLink">CHECK-APP</a>
                     &nbsp; &mdash; &nbsp;
                     A check app for restaurants, cafes and bars; built with JavaScript, Next.js, Express.js and MongoDB.
                     <a href="https://github.com/savashn/check-app" class="githubLink">[FRONTEND CODE]</a>
                     <a href="https://github.com/savashn/check-app-api" class="githubLink">[BACKEND CODE]</a>
                 </li>
                 <li>
-                    <a href="https://wordimus.com/" class="appLink">WORDIMUS</a>
+                    <a href="https://wordimus.com" class="appLink">WORDIMUS</a>
                     &nbsp; &mdash; &nbsp;
                     A blog app built with TypeScript, Next.js, Express.js and PostgreSQL.
                     <a href="https://github.com/savashn/wordimus" class="githubLink">[FRONTEND CODE]</a>
                     <a href="https://github.com/savashn/wordimus-api" class="githubLink">[BACKEND CODE]</a>
                 </li>
                 <li>
-                    <a href="https://tic-tac-toe-omega-ivory.vercel.app/" class="appLink">TIC-TAC-TOE</a>
+                    <a href="https://tic-tac-toe-omega-ivory.vercel.app" class="appLink">TIC-TAC-TOE</a>
                     &nbsp; &mdash; &nbsp;
                     A basic tic-tac-toe game built with SvelteKit.
                     <a href="https://github.com/savashn/tic-tac-toe" class="githubLink">[SOURCE CODE]</a>
