--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
                     <img src="./public/fastify-icon-svgrepo-com.svg" alt="" class="invertImg">
                     <span class="tooltipText">Fastify</span>
                 </div>
+
+                <div class="tooltip">
+                    <img src="./public/ecewo-spiral.svg" alt="" class="img">
+                    <span class="tooltipText">Ecewo</span>
+                </div>
             </div>
 
             <hr>
@@ -127,9 +132,9 @@
                 <li>
                     <a href="https://ecewo.vercel.app" class="appLink">ECEWO</a>
                     &nbsp; &mdash; &nbsp;
-                    A minimal HTTP framework for C that handles the complexities of C programming and helps you build
-                    your backend with ease. <a href="https://github.com/savashn/ecewo" class="githubLink">[SOURCE
-                        CODE]</a>
+                    A modern and developer friendly microframework for web development in C. Inspired by the simplicity
+                    of Express.js and the plugin system of Fastify. <a href="https://github.com/savashn/ecewo"
+                        class="githubLink">[SOURCE CODE]</a>
                 </li>
                 <li>
                     <a href="https://lexicographia.com" class="appLink">LEXICOGRAPHIA</a>
