--- a/index.html
+++ b/index.html
@@ -132,9 +132,19 @@
                 <li>
                     <a href="https://ecewo.vercel.app" class="appLink">ECEWO</a>
                     &nbsp; &mdash; &nbsp;
-                    A modern and developer friendly microframework for web development in C. Inspired by the simplicity
-                    of Express.js and the plugin system of Fastify. <a href="https://github.com/savashn/ecewo"
-                        class="githubLink">[SOURCE CODE]</a>
+                    A modern and easy-to-use microframework for modern web development in C. Inspired by the simplicity
+                    of Express.js. <a href="https://github.com/savashn/ecewo" class="githubLink">[SOURCE CODE]</a>
+                </li>
+                <li>
+                    <a href="https://github.com/savashn/slugify-c" class="appLink">SLUGIFY-C</a>
+                    &nbsp; &mdash; &nbsp;
+                    A C library to convert strings to URL-friendly ASCII slugs.
+                </li>
+                <li>
+                    <a href="https://github.com/savashn/pquv" class="appLink">PQUV</a>
+                    &nbsp; &mdash; &nbsp;
+                    A C library that integrates libpq with libuv to simplify running asynchronous PostgreSQL queries in
+                    libuv event loop.
                 </li>
                 <li>
                     <a href="https://lexicographia.com" class="appLink">LEXICOGRAPHIA</a>
@@ -164,19 +174,6 @@
                     <a href="https://github.com/savashn/ocr" class="appLink">OCR FOR WINDOWS</a>
                     &nbsp; &mdash; &nbsp;
                     PDF to .docx and .txt converter for Windows, built with Python and Tesseract OCR.
-                </li>
-                <li>
-                    <a href="https://savashn.github.io/password-creator" class="appLink">PASSWORD CREATOR</a>
-                    &nbsp; &mdash; &nbsp;
-                    A basic password creator built with HTML, CSS and JavaScript.
-                    <a href="https://github.com/savashn/password-creator" class="githubLink">[SOURCE CODE]</a>
-                </li>
-                <li>
-                    <a href="https://check-app-eight.vercel.app" class="appLink">CHECK-APP</a>
-                    &nbsp; &mdash; &nbsp;
-                    A check app for restaurants, cafes and bars; built with JavaScript, Next.js, Express.js and MongoDB.
-                    <a href="https://github.com/savashn/check-app" class="githubLink">[FRONTEND CODE]</a>
-                    <a href="https://github.com/savashn/check-app-api" class="githubLink">[BACKEND CODE]</a>
                 </li>
                 <li>
                     <a href="https://wordimus.com" class="appLink">WORDIMUS</a>
