--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
                     of Express.js. <a href="https://github.com/savashn/ecewo" class="githubLink">[SOURCE CODE]</a>
                 </li>
                 <li>
+                    <a href="https://github.com/savashn/ecewo-example" class="appLink">ECEWO EXAMPLE</a>
+                    &nbsp; &mdash; &nbsp;
+                    A simple example project that demonstrates how to use Ecewo framework with PostgreSQL.
+                </li>
+                <li>
                     <a href="https://github.com/savashn/slugify-c" class="appLink">SLUGIFY-C</a>
                     &nbsp; &mdash; &nbsp;
                     A C library to convert strings to URL-friendly ASCII slugs.
